More robust code, based on Yohai's comments. Updated design of external ids. Extensible architecture for external ids

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
      <title>ORCID Works List - jQuery ORCID Widget</title>
      <script type='text/javascript' src='http://code.jquery.com/jquery-1.9.1.js'></script>
-     <script type='text/javascript' src="../jQuery.orcidWidget.js"></script>
+     <script type='text/javascript' src="../jquery.orcidWidget.js"></script>
      <link rel="stylesheet" type="text/css" href="../orcid-widget.css">
   </head>
   <body>
